# rKCmcp

./: .env.example  .gitignore  .rustfmt.toml  404.html  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.indexer  LICENSE  README.md  clippy.toml  docker-compose.yml  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: ci.yml  docker.yml  pages.yml  release.yml  security.yml
01-overview/: index.html
02-architecture/: index.html
03-request-flow/: index.html
04-components/keycloak-client/: index.html
04-components/mcp-server/: index.html
04-components/oauth-auth/: index.html
04-components/tool-system/: index.html
05-api-reference/: index.html
05-api-reference/authentication/: index.html
05-api-reference/authorization/: index.html
05-api-reference/client-scopes/: index.html
05-api-reference/clients/: index.html
05-api-reference/groups/: index.html
05-api-reference/identity-providers/: index.html
05-api-reference/realms/: index.html
05-api-reference/roles/: index.html
05-api-reference/users/: index.html
06-configuration/: index.html
07-extending/: index.html
08-troubleshooting/: index.html
docs/: 01-overview.md  02-architecture.md  03-request-flow.md  06-configuration.md  07-extending.md  08-troubleshooting.md  index.md
docs/04-components/: keycloak-client.md  mcp-server.md  oauth-auth.md  tool-system.md
docs/05-api-reference/: authentication.md  authorization.md  client-scopes.md  clients.md  groups.md  identity-providers.md  index.md  realms.md  roles.md  (+1 more)
keycloak/: mcp-realm.json  mcp-test-realm.json
overrides/: main.html
scripts/: index_code.py  index_docs.py
search/: search_index.json
src/: lib.rs  main.rs
stylesheets/: extra.css
tests/: integration.rs
(+61 files in other folders)
